tester for Java 21